# langchain-cerebras-modern

./: README.md  RELEASING.md
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml
libs/cerebras/: README.md  pyproject.toml
libs/cerebras/langchain_cerebras/: chat_models.py
libs/cerebras/tests/integration_tests/: __init__.py  test_base_standard.py  test_reasoning.py  test_reasoning_parameters.py
libs/cerebras/tests/unit_tests/: test_chat_models.py
