[tool.codespell]
skip = ".git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples,*.trig"
ignore-words-list = "mane"

[tool.poetry]
name = "langchain-cerebras-modern"
version = "0.8.2.post1"
description = "A compatibility fork of the Cerebras LangChain integration for modern LangChain and Python 3.13"
authors = []
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ImJustAskingDude/langchain-cerebras-modern"
repository = "https://github.com/ImJustAskingDude/langchain-cerebras-modern"
packages = [{ include = "langchain_cerebras" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain-core = ">=1.2.18,<2.0.0"
langchain-openai = ">=1.1.11,<2.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-socket = "^0.7.0"
langchain-tests = "^1.0.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.8"

[tool.poetry.group.typing.dependencies]
mypy = "^1.7.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test_integration]
optional = true
dependencies = {}

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]

[tool.mypy]
disallow_untyped_defs = "True"

[[tool.mypy.overrides]]
module = ["langchain_standard_tests.*", "langchain_tests.*"]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
# addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
  "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.urls]
Homepage = "https://github.com/ImJustAskingDude/langchain-cerebras-modern"
Repository = "https://github.com/ImJustAskingDude/langchain-cerebras-modern"
Issues = "https://github.com/ImJustAskingDude/langchain-cerebras-modern/issues"
